# regime-detection

./: .gitattributes  .gitignore  .jscpd.json  .pre-commit-config.yaml  .regime-operator.env.example  AGENTS.md  CLAUDE.md  CODEOWNERS  Makefile  README.md  TECH_DEBT_AUDIT.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  cubic.yaml  deptry.toml  event_calendar_fetch_report.json  pyproject.toml  pytest.ini  pytest_runtime_policy.py  renovate.json  requirements-dev.txt  requirements.txt  spec_review.md
.devcontainer/: devcontainer.json
.entire/tmp/: pre-prompt-019e1bbf-3fcd-7392-90f4-8301560aa5c6.json
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codex-review.yml  dependency-health.yml  flaky-tests.yml  full-verification.yml  labels.yml  release.yml  runtime-error-intake.yml  security.yml
configs/events/: group_b_approvals.yaml  us_events.yaml
docs/: audit_open_questions.md  credit_spread_tlt_proxy_parallel_metric_plan.md  envoy_mcp_coordination.md  historical_walkforward_spec.md  market_data_fetch_plan.md  pyright_pandas_stub_policy.md  regime_engine_contracts.md  regime_engine_v1_data_requirements.md  regime_engine_v1_final_spec.md  regime_engine_v2_spec.md  review_and_ci_setup.md  shadow_runner_spec.md  simplify_report_2026_05_24.md  spec_code_data_audit_2026_05_15.md  transition_risk.md  v2_slice_gate_checklist.md
docs/decisions/: 0001-vps-runner.md  0002-event-calendar-contract.md  0003-breadth-thrust-and-recovery-breadth-predicates.md  0004-euphoria-sentiment-score-and-vol-rising-pins.md  0005-vol-crush-implied-vol-and-event-window.md  0006-inflation-surprise-cleveland-fed-nowcast-substitute.md  0007-credit-spread-tlt-proxy-parallel-metric.md  0008-v2-pit-evidence-and-macro-carry-forward.md  0009-funding-spread-pre-era-proxy.md  0010-per-label-hysteresis-and-audit-hardening.md  0011-inflation-growth-rule-coverage-fix.md  0012-inflation-growth-credit-ad-hoc-knobs.md  0013-evidence-strategy-governance-closeouts.md  0014-event-calendar-v2-precedence-and-windows.md  0015-data-quality-completeness-gate.md  0016-trend-direction-risk-rank-vs-precedence.md  0017-network-fragility-coverage-amendments.md  0018-verified-regime-issue-closeout.md  0019-valid-data-mixed-fallback-labels.md  0019-valid-data-rule-partitions.md  0020-v2-prerequisite-and-shadow-scope.md  0021-cold-start-warmup-fallback-predicates.md  0022-correlation-to-one-percentile-cannot-detect-single-day-shock.md  0023-v2-91-gate-offline-promotion-scope.md  0024-hmm-drift-source-and-transition-prob-flag-definition.md  0025-shadow-strategy-success-metrics.md
docs/goals/: goal-1-data-loading.md  goal-2-hmm-gmm-fitting.md  goal-3-test-suite-runtime-claude.md  goal-3-test-suite-runtime.md
docs/patches/: regime_keep_v1_expiry_week_experiment.patch
docs/verification/: artifact_materialization_check.md  breadth_golden_labels_2026-05-31.md  change_point_bocpd_recalculation_2026_05_23.md  cluster_label_map.candidate.yaml  cluster_label_map.yaml  golden_dates_replacement_justification.md  hmm_state_label_map.candidate.yaml  hmm_state_label_map.yaml  lexicon_validation.md  lexicon_validation_confusion_matrix.csv  pr27_slice_gate_evidence.md  v2_calibration_summary.md  v2_data_acquisition_backlog.md  v2_shadow_ab_60session.md  v2_walkforward_perf_gate.md
logs/: runtime.out
manifests/: README.md
manifests/runs/: profile_ready_daily_ohlcv_762_2016_20260515.md  profile_ready_daily_ohlcv_762_2016_20260515.yaml  regime_engine_2026-05-17.yaml
plans/: 001-bind-historical-walkforward-manifest-paths.md  002-remove-production-assert-guards.md  README.md
scripts/: _fetch_regime_engine_v1_args.py  _v2_calibration_helpers.py  approve_group_b_candidate.py  audit_layer2_30d.py  audit_step1_harness.py  backfill_ohlcv_manifest_sha256.py  build_shadow_metrics_report.py  build_walkforward_report.py  claude_code_simplifier.sh  claude_pr_review_toolkit.sh  codex_code_simplifier.sh  codex_pr_review_toolkit.sh  consolidate_regime_acquisition.py  cubic_review.sh  detect_flaky_tests.py  envoy_supervised_watcher.py  fetch_aaii_sentiment.py  fetch_regime_engine_v1_data.py  fixture_axis_evaluators.py  generate_followthrough_pinned_fixture.py  materialize_constituent_ohlcv_tree.py  materialize_regime_data.py  normalize_s3_daily_to_sqlite_layout.py  profile_engine.py  profile_engine_30d.py  profile_engine_30d_reporting.py  profile_engine_reporting.py  profile_engine_timers.py  publish_canonical_snapshot.py  run_historical_walkforward.py  run_shadow_deadman_check.py  run_shadow_regime.py  run_shadow_replay_check.py  run_v2_calibration.py  run_v2_shadow_ab_gate.py  run_v2_walkforward_gate.py  run_walkforward_replay_check.py  upload_missing_ohlcv_to_manifest.py  validate_agents_md.py  validate_central_bank_text_lexicon.py  (+1 more)
tests/: _v1_frozen_models.py  audit_step1_fixture_templates.py  conftest.py  test_aaii_sentiment_fetch.py  test_acquisition_artifact_ledger.py  test_acquisition_consolidation.py  test_acquisition_consolidation_normalized.py  test_acquisition_schema.py  test_aggregate_eps.py  test_aggregate_eps_wayback.py  test_aggregate_eps_weekly_history.py  test_alpaca_normalization.py  test_approve_group_b_candidate.py  test_artifact_export.py  test_artifact_manifest.py  test_artifact_store.py  test_audit_step1_fixture_templates.py  test_audit_step1_harness.py  test_autoresearch_script.py  test_axis_builders.py  test_axis_series.py  test_axis_series_cleanup.py  test_bls_schedule.py  test_boundary_policies.py  test_breadth_state.py  test_breadth_state_v2_bias_warnings_scaffolding.py  test_breadth_state_v2_features.py  test_breadth_state_v2_labels.py  test_breadth_state_v2_pit_features.py  test_breadth_v2_bias_rejection_gate.py  test_build_walkforward_report.py  test_calendar.py  test_canonical_parquet.py  test_central_bank_text.py  test_central_bank_text_cycle_regression.py  test_change_point.py  test_classification_coverage.py  test_classification_status.py  test_classify_series.py  test_cleveland_fed_nowcast.py  (+135 more)
(+271 files in other folders)
