[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-detection"
version = "2.0.0"
description = "Regime detection engine (V1+V2 unified)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.3.0",
  "pandas==2.3.0",
  "pydantic>=2,<3",
  "pandas_market_calendars==5.1.1",
  "pyarrow==23.0.0",
  "pyyaml==6.0.2",
  "openpyxl==3.1.5",
  "xlrd==2.0.2",
  "hmmlearn>=0.3,<0.4",
  "opentelemetry-api==1.36.0",
  # Adapter in regime_detection.change_point uses
  # online_changepoint_detection(data, hazard_func, observation_likelihood),
  # constant_hazard(lam, r), and StudentT(alpha, beta, kappa, mu).
  "bayesian-changepoint-detection>=0.2.dev1",
]

[project.optional-dependencies]
s3 = [
  "boto3>=1.34,<2",
]
browser = [
  "playwright>=1.50,<2",
]
audit = [
  "pip-audit",
  "pydeps",
  "vulture",
  "radon",
  "deptry",
]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
  "hypothesis",
  "ruff",
  "pyright",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pyright]
typeCheckingMode = "strict"
include = [
  "src/regime_detection/observability.py",
]

[tool.radon]
cc_min = "B"
exclude = "tests/*,.venv/*,venv/*"

[tool.deptry]
extend_exclude = [
  "tests",
]
known_first_party = [
  "regime_detection",
  "regime_data_fetch",
  "regime_shared",
  "_fetch_regime_engine_v1_args",
  "_v2_calibration_helpers",
]
optional_dependencies_dev_groups = [
  "dev",
  "audit",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regime_detection = ["configs/*.yaml"]

[tool.ruff.lint.per-file-ignores]
"scripts/approve_group_b_candidate.py" = ["E402"]
"scripts/audit_layer2_30d.py" = ["E402"]
"scripts/consolidate_regime_acquisition.py" = ["E402"]
"scripts/fetch_aaii_sentiment.py" = ["E402"]
"scripts/materialize_regime_data.py" = ["E402"]
"scripts/run_shadow_deadman_check.py" = ["E402"]
"scripts/run_shadow_regime.py" = ["E402"]
"scripts/run_shadow_replay_check.py" = ["E402"]
