[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-detection"
version = "2.0.0"
description = "Regime detection engine (V1+V2 unified)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pydantic>=2,<3",
  "pandas_market_calendars",
  "pyyaml",
  "alpaca-py>=0.43,<1",
  "hmmlearn>=0.3,<0.4",
  "joblib>=1.5,<2",
  "openpyxl>=3.1,<4",
  "scikit-learn>=1.8,<2",
  "xlrd>=2,<3",
  # Adapter in regime_detection.change_point uses
  # online_changepoint_detection(data, hazard_func, observation_likelihood),
  # constant_hazard(lam, r), and StudentT(alpha, beta, kappa, mu).
  "bayesian-changepoint-detection>=0.2.dev1",
]

[project.optional-dependencies]
s3 = [
  "boto3>=1.34,<2",
]
browser = [
  "playwright>=1.50,<2",
]
audit = [
  "pip-audit",
  "pydeps",
  "vulture",
]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
  "hypothesis",
  "deptry",
  "ruff",
  "pyright",
  "pyarrow",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
regime_detection = ["configs/*.yaml"]

[tool.deptry]
known_first_party = ["regime_detection", "regime_data_fetch"]
optional_dependencies_dev_groups = ["dev", "audit"]

[tool.deptry.package_module_name_map]
"regime-detection" = "regime_detection|regime_data_fetch"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"scripts/approve_group_b_candidate.py" = ["E402"]
"scripts/audit_layer2_30d.py" = ["E402"]
"scripts/consolidate_regime_acquisition.py" = ["E402"]
"scripts/fetch_aaii_sentiment.py" = ["E402"]
"scripts/materialize_regime_data.py" = ["E402"]
"scripts/run_shadow_deadman_check.py" = ["E402"]
"scripts/run_shadow_regime.py" = ["E402"]
"scripts/run_shadow_replay_check.py" = ["E402"]
